# cowtreedict

./: README.md  cowtreedict.py  pyproject.toml  requirements.txt
