[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cowtreedict"
version = "0.1.0a0"
description = "An immutable, copy-on-write (COW) tree-based sorted dictionary with order-statistic operations"
readme = "README.md"
requires-python = ">=2"
license = "Apache-2.0"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tuplehash",
    "typing; python_version < '3.5'",
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/cowtreedict"
"Bug Tracker" = "https://github.com/jifengwu2k/cowtreedict/issues"
